# go-hello-swig

./: .gitignore  CMakeLists.txt  README.md  go.mod  main.go
.github/workflows/: go-run.yml
greet/: greet.cpp  greet.go  greet.hpp  greet.i  greet.swigcxx  greet_cgo.go  greet_wrap.cxx
greet/src/: greet.cpp
include/: greet.hpp
src/: greet.cpp  greet.go  greet.i  greet_generate.go  greet_wrap.cxx
